--- a/ejemplo1/pagina2.html
+++ b/ejemplo1/pagina2.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 1</title>
+    <title>Pagina 2</title>
 </head>
 <body>
-    Hola Mundo
-    <br>
-    <a href="pagina2.html">Ir a pagina 2</a>
+   Esta es la pagina 2.
+   <a href="index.html">Ir a pagina Index</a> 
 </body>
 </html>
