Creación índice principal

--- a/cursoHTML/ejemplo1/index.html
+++ b/cursoHTML/ejemplo1/index.html
@@ -9,5 +9,7 @@
     Hola Mundo
     <br>
     <a href="pagina2.html">Ir a pagina 2</a>
+    <a href="../../index.html">Ir a pagina Principal</a>
+
 </body>
 </html>
