--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
     <title>Pagina Inicial</title>
 </head>
 <body>
-    <a href="cursoHTML/ejemplo1/index.html">Ir a pagina 1</a>
-    <a href="cursoHTML/ejemplo1/pagina2.html">Ir a pagina 2</a>
+    <!--Dentro de las cabezeras solo llega a h6-->
+    <h1>Titulo 1</h1>
+    <h2>Titulo 2</h2>
+    <h3>Titulo 3</h3>
+    <h4>Titulo 4</h4>
+    <h5>Titulo 5</h5>
+    <h6>Titulo 6</h6>
+    <!--hr sirve para crear una linea horizontal divisoria -->
+    <hr>
+    <!--El &nbsp; es para dar un espacio en blanco pasando del tipo de display-->
+    <p> 
+        <a href="cursoHTML/ejemplo1/index.html">Ir a pag&nbsp;ina 1</a>
+        <br/>
+    <!--em es igual a cursiva-->
+        <a href="cursoHTML/ejemplo1/pagina2.html"><em>Ir a pagina 2</em></a>
+    </p>
+    <!--la etiqueta pre es para hacer que los espacios en blanco se realizen sin meter lo anterior-->
+    <pre>
+<a href="cursoHTML/ejemplo1/index.html"><b>Ir a pag     ina 1</b></a>
+        <br/>
+    <!--b y strong hacen los mimo pero con strong tiene mas caracter semantico, se usa siempre strong-->
+        <a href="cursoHTML/ejemplo1/pagina2.html"><strong>Ir a pagina 2</strong></a>
+    </pre>
+    <p> 
+        <a href="cursoHTML/ejemplo1/index.html"><code>a pagina 1</code> </a>
+        <br/>
+    <!--em es igual a cursiva-->
+        <a href="cursoHTML/ejemplo1/pagina2.html">Ir a pagina 2</a>
+    </p>
 </body>
 </html>
