--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
     <title>Pagina Inicial</title>
 </head>
 <body>
-    <!--Dentro de las cabezeras solo llega a h6-->
-    <h1>Titulo 1</h1>
-    <h2>Titulo 2</h2>
-    <h3>Titulo 3</h3>
-    <h4>Titulo 4</h4>
-    <h5>Titulo 5</h5>
-    <h6>Titulo 6</h6>
     <!--hr sirve para crear una linea horizontal divisoria -->
     <hr>
     <!--El &nbsp; es para dar un espacio en blanco pasando del tipo de display-->
@@ -35,5 +28,7 @@
     <!--em es igual a cursiva-->
         <a href="cursoHTML/ejemplo1/pagina2.html">Ir a pagina 2</a>
     </p>
+    <br/>
+    <a href="cursoHTML/ejercicio1/ejercicio_1.html">Ejercicio 1</a>
 </body>
 </html>
