--- a/cursoCSS/pagina_1/pagina1.html
+++ b/cursoCSS/pagina_1/pagina1.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina1</title>
+    <link rel="stylesheet" type="text/css" href="css/css_pagina.css"/>
 </head>
 <body>
     <header>
         <h1>Bienvenido a mi web</h1>
-        <p>Aprendiendo HTML y CSS</p>
+        <p class="subtitulo">Aprendiendo HTML y CSS</p>
     </header>
     <nav>
         <ul>
@@ -19,14 +20,17 @@
             <li><a href="pagina1.html">CONTACTO</a></li>
         </ul>
     </nav>
-    <section>
-
+    <section class="contenido">
+        <h2>Sobre Nosotros</h2>
+        <p class="destacado">Somos una empresa dedicada al desarrollo Web</p>
+        <p>Ofrecemos soluciones modernas.</p>
     </section>
     <aside>
-
+        <h3>NOTICIAS RECIENTES</h3>
+        <p>CSS es una herramienta potente.</p>
     </aside>
     <footer>
-
+        <p>&copy;2025 Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
