day 18 march venancio
lists

--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
          <li>
             <a href="cursoHTML/ejercicio1/ejercicio_1.html">Ejercicio 1</a>
          </li>   
-    </ul>     
+    </ul> 
+    <ol  reversed start="32">
+        <li>Fragmentos de motor</li>
+        <li>Sacos de tornillos</li>
+    </ol> 
+    <ol  type="i">
+        <li>Fragmentos de motor</li>
+        <li>Sacos de tornillos</li>
+    </ol>     
+    <ol>
+        <li value="2">Fragmentos de motor</li>
+        <li>Sacos de tornillos</li>
+    </ol> 
+    <dl>
+        <dt>Automóvil</dt>
+            <dd>Vehículo de cuatro ruedas con motor</dd>
+    </dl>
 </body>
 </html>
