--- a/cursoCSS/pagina_4/pagina_4.html
+++ b/cursoCSS/pagina_4/pagina_4.html
@@ -11,12 +11,13 @@
         <div class="producto">
             <span class="oferta">¡Oferta!</span>
             <h2>Vaqueros Slim fit</h2>
-            <img class="pantalones_verdes" src="img/vaqueros verdes.jpg"/>
+            <img class="pantalones_verdes" src="img/vaqueros_verdes.jpg"/>
             <p class="descripion">Ajustados al cuerpo, modernos y cómodos</p>
             <p class="precio">49.99 €</p>
         </div>
         <div class="producto grande">
             <h2>Vaqueros Clásicos</h2>
+            <img class="pantalones_verdes" src="img/vaqueros_verdes.jpg"/>
             <p class="descripion">Corte recto y atemporal. Ideal para cualquier ocasión</p>
             <p class="precio">39.99 €</p>
         </div>
@@ -30,18 +31,20 @@
     <div class="catalogo">
         <div class="producto grande">
             <h2>Vaqueros Slim fit</h2>
-            <img class="pantalones_verdes" src="img/vaqueros verdes.jpg"/>
+            <img class="pantalones_verdes" src="img/vaqueros_verdes.jpg"/>
             <p class="descripion">Ajustados al cuerpo, modernos y cómodos</p>
             <p class="precio">49.99 €</p>
         </div>
         <div class="producto">
             <span class="oferta">¡Oferta!</span>
             <h2>Vaqueros Clásicos</h2>
+            <img class="pantalones_verdes" src="img/pantalones_rojos.jpg"/>
             <p class="descripion">Corte recto y atemporal. Ideal para cualquier ocasión</p>
             <p class="precio">39.99 €</p>
         </div>
         <div class="producto grande">
             <h2>Vaqueros Rotos</h2>
+            <img class="pantalones_verdes" src="img/grupo_rojo.jpg"/>
             <p class="descripion">Estilo urbano con rotos en las rodillas. Solo para los más atrevidos</p>
             <p class="precio">59.99 €</p>
         </div>
