--- a/index.html
+++ b/index.html
@@ -56,5 +56,14 @@
         <dt>Automóvil</dt>
             <dd>Vehículo de cuatro ruedas con motor</dd>
     </dl>
+    <ol>
+        <li><a href="cursoHTML/ejercicio_1/ejercicio_1.html">ejercicio1</a></li>
+        <li><a href="cursoHTML/ejercicio_2/ejercicio_2.html">ejercicio2</a></li>
+        <li><a href="cursoHTML/ejercicio_4/ejercicio_4.html">ejercicio3</a></li>
+        <li><a href="cursoHTML/ejercicio_5/index.html">ejercicio4</a></li>
+        <li><a href="cursoHTML/ejercicio_6/ejercicio_6.html">ejercicio5</a></li>
+        <li><a href="cursoHTML/ejercicio_7/ejercicio_7.html">ejercicio6</a></li>
+        <li><a href="cursoHTML/ejercicio_8/ejercicio_8.html">ejercicio7</a></li>
+    </ol>
 </body>
 </html>
