--- a/cursoCSS/GameStore/index.html
+++ b/cursoCSS/GameStore/index.html
@@ -41,8 +41,8 @@
         <p> ¿Quieres asegurarte de conseguir los juegos más esperados? Con nuestro sistema de reservas, podrás apartar tu copia antes del lanzamiento.</p>
     </div>
 
-    <footer >
-        <h3 class="pie">Calle Barracuda del solar, Nº45</h3>
+    <footer id="pie">
+        <h3>Calle Barracuda del solar, Nº45</h3>
         <p>+34 967 458 896</p>
         <p>Redes sociales: 
             <a href="https://www.youtube.com">Instagram</a>
