--- a/cursoHTML/ejercicio_9/ejercicio_9.html
+++ b/cursoHTML/ejercicio_9/ejercicio_9.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8" />
     <title>aulaClic. Cursos gratis</title>
     <link rel="stylesheet" type="text/css" href="css/ejercicio_9.css" />
+
 </head>
 
 <body>
+    <script src="js/ejercicio_9.js"></script>
     <header>
         <a href="https://www.aulaclic.es"><img src="img/image.png"></a>
         <h2>aulaClic. Cursos de informática gratis</h2>
