--- a/cursoCSS/GameStore/productos.html
+++ b/cursoCSS/GameStore/productos.html
@@ -13,45 +13,50 @@
         </div>
         <nav class="navegacion">
             <a href="index.html">Inicio</a>
-            <a href="#">PC</a>
-            <a href="#pie">Playstation</a>
+            <a href="#h2jeugospc">PC</a>
+            <a href="#h2juegosplay">Playstation</a>
         </nav>
     </header>
     <main>
-        <h2>Juegos de PC</h2>
+        <h2 id="h2juegospc">Juegos de PC</h2>
         <div class="juegos_pc">
+            
             <div class="pc">
                 <img src="img/enshrouded.jpg">
                 <p class="precio">Precio:30.00€</p>
                 <h3>Enshrouded</h3>
                 <p class="descripcion"><strong>Descripcion:</strong>Enshrouded es un próximo juego de rol de acción y supervivencia de Keen Games para Windows, PlayStation 5 y Xbox Series X/S.</p>
             </div>
-        </div>
-        <div class="juegos_pc">
             <div class="pc">
                 <img src="img/kingdom.png">
                 <p class="precio">Precio:69.99€</p>
                 <h3>Kingdom Come Deliverance II</h3>
                 <p class="descripcion"><strong>Descripcion:</strong>Enshrouded es un próximo juego de rol de acción y supervivencia de Keen Games para Windows, PlayStation 5 y Xbox Series X/S.</p>
             </div>
-        </div>
-        <div class="juegos_pc">
             <div class="pc">
                 <img src="img/no_man.jpg">
                 <p class="precio">Precio:45.00€</p>
                 <h3>No Man's Sky</h3>
                 <p class="descripcion"><strong>Descripcion:</strong>No Man's Sky es un videojuego desarrollado y publicado por Hello Games para PlayStation 5, PlayStation 4, Xbox One, Xbox Series X/S, Microsoft Windows y Nintendo Switch.​​​</p>
             </div>
-        </div>
-        <div class="juegos_pc">
             <div class="pc">
                 <img src="img/shadows.jpg">
                 <p class="precio">Precio:65.00€</p>
                 <h3>Assassins Creed Shadows</h3>
                 <p class="descripcion"><strong>Descripcion:</strong>Assassin's Creed Shadows es un videojuego de rol de acción desarrollado por Ubisoft Quebec y publicado por Ubisoft, lanzado el 20 de marzo de 2025 para PlayStation 5, Windows, macOS y Xbox Series X/S.​</p>
             </div>
-        </div>
-        <div class="juegos_pc">
+            <div class="pc">
+                <img src="img/no_man.jpg">
+                <p class="precio">Precio:45.00€</p>
+                <h3>No Man's Sky</h3>
+                <p class="descripcion"><strong>Descripcion:</strong>No Man's Sky es un videojuego desarrollado y publicado por Hello Games para PlayStation 5, PlayStation 4, Xbox One, Xbox Series X/S, Microsoft Windows y Nintendo Switch.​​​</p>
+            </div>
+            <div class="pc">
+                <img src="img/no_man.jpg">
+                <p class="precio">Precio:45.00€</p>
+                <h3>No Man's Sky</h3>
+                <p class="descripcion"><strong>Descripcion:</strong>No Man's Sky es un videojuego desarrollado y publicado por Hello Games para PlayStation 5, PlayStation 4, Xbox One, Xbox Series X/S, Microsoft Windows y Nintendo Switch.​​​</p>
+            </div>
             <div class="pc">
                 <img src="img/no_man.jpg">
                 <p class="precio">Precio:45.00€</p>
@@ -59,28 +64,44 @@
                 <p class="descripcion"><strong>Descripcion:</strong>No Man's Sky es un videojuego desarrollado y publicado por Hello Games para PlayStation 5, PlayStation 4, Xbox One, Xbox Series X/S, Microsoft Windows y Nintendo Switch.​​​</p>
             </div>
         </div>
+        <h2 id="h2juegosplay">Juegos de Playstation</h2>   
         <div class="juegos_pc">
+    
             <div class="pc">
-                <img src="img/no_man.jpg">
-                <p class="precio">Precio:45.00€</p>
-                <h3>No Man's Sky</h3>
-                <p class="descripcion"><strong>Descripcion:</strong>No Man's Sky es un videojuego desarrollado y publicado por Hello Games para PlayStation 5, PlayStation 4, Xbox One, Xbox Series X/S, Microsoft Windows y Nintendo Switch.​​​</p>
+                <img src="img/enshrouded.jpg">
+                <p class="precio">Precio:30.00€</p>
+                <h3>Enshrouded</h3>
+                <p class="descripcion"><strong>Descripcion:</strong>Enshrouded es un próximo juego de rol de acción y supervivencia de Keen Games para Windows, PlayStation 5 y Xbox Series X/S.</p>
             </div>
-        </div>
-        <div class="juegos_pc">
             <div class="pc">
-                <img src="img/no_man.jpg">
-                <p class="precio">Precio:45.00€</p>
-                <h3>No Man's Sky</h3>
-                <p class="descripcion"><strong>Descripcion:</strong>No Man's Sky es un videojuego desarrollado y publicado por Hello Games para PlayStation 5, PlayStation 4, Xbox One, Xbox Series X/S, Microsoft Windows y Nintendo Switch.​​​</p>
+                <img src="img/enshrouded.jpg">
+                <p class="precio">Precio:30.00€</p>
+                <h3>Enshrouded</h3>
+                <p class="descripcion"><strong>Descripcion:</strong>Enshrouded es un próximo juego de rol de acción y supervivencia de Keen Games para Windows, PlayStation 5 y Xbox Series X/S.</p>
             </div>
-        </div>
-        <div class="juegos_pc">
             <div class="pc">
-                <img src="img/no_man.jpg">
-                <p class="precio">Precio:45.00€</p>
-                <h3>No Man's Sky</h3>
-                <p class="descripcion"><strong>Descripcion:</strong>No Man's Sky es un videojuego desarrollado y publicado por Hello Games para PlayStation 5, PlayStation 4, Xbox One, Xbox Series X/S, Microsoft Windows y Nintendo Switch.​​​</p>
+                <img src="img/enshrouded.jpg">
+                <p class="precio">Precio:30.00€</p>
+                <h3>Enshrouded</h3>
+                <p class="descripcion"><strong>Descripcion:</strong>Enshrouded es un próximo juego de rol de acción y supervivencia de Keen Games para Windows, PlayStation 5 y Xbox Series X/S.</p>
+            </div>
+            <div class="pc">
+                <img src="img/enshrouded.jpg">
+                <p class="precio">Precio:30.00€</p>
+                <h3>Enshrouded</h3>
+                <p class="descripcion"><strong>Descripcion:</strong>Enshrouded es un próximo juego de rol de acción y supervivencia de Keen Games para Windows, PlayStation 5 y Xbox Series X/S.</p>
+            </div>
+            <div class="pc">
+                <img src="img/enshrouded.jpg">
+                <p class="precio">Precio:30.00€</p>
+                <h3>Enshrouded</h3>
+                <p class="descripcion"><strong>Descripcion:</strong>Enshrouded es un próximo juego de rol de acción y supervivencia de Keen Games para Windows, PlayStation 5 y Xbox Series X/S.</p>
+            </div>
+            <div class="pc">
+                <img src="img/enshrouded.jpg">
+                <p class="precio">Precio:30.00€</p>
+                <h3>Enshrouded</h3>
+                <p class="descripcion"><strong>Descripcion:</strong>Enshrouded es un próximo juego de rol de acción y supervivencia de Keen Games para Windows, PlayStation 5 y Xbox Series X/S.</p>
             </div>
         </div>
     </main>
