--- a/cursoCSS/pagina_6/pagina_6.html
+++ b/cursoCSS/pagina_6/pagina_6.html
@@ -79,8 +79,29 @@
                 <p class="precio">30.000€</p>
                 <p class="descripcion">Sedan, familiar y comodo.</p>
             </div>
-
             <div class="coche">
+                <img src="img/3.jpeg">
+                <h3>Modelo 3</h3>
+                <p class="precio">28.000€</p>
+                <p class="descripcion">Economico, ligero y rapido.</p>
+            </div>
+
+        </div>
+        <div class="grid-container">
+            <div class="item">
+                <span class="oferta">Oferta</span>
+                <img src="img/1.png">
+                <h3>Modelo 1</h3>
+                <p class="precio">25.000€</p>
+                <p class="descripcion">Compacto, urbano y eficiente.</p>
+            </div>
+            <div class="item">
+                <img src="img/2.jpg">
+                <h3>Modelo 2</h3>
+                <p class="precio">30.000€</p>
+                <p class="descripcion">Sedan, familiar y comodo.</p>
+            </div>
+            <div class="item">
                 <img src="img/3.jpeg">
                 <h3>Modelo 3</h3>
                 <p class="precio">28.000€</p>
