--- a/cursoCSS/pagina_9/pagina1.html
+++ b/cursoCSS/pagina_9/pagina1.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>MundoDino🌿</h1>
+        <input type="checkbox" id="menu">
+        <label for="menu" class="menu-icon">&#9776;</label>
         <nav>
             <ul>
                 <li><a href="#">Inicio🏞️</a></li>
@@ -20,18 +22,76 @@
     <hr>
     <main>
         <div class="bienvenida">
-            <h1>Bienvenido a MundoDino🌿</h1>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>    
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-            <p>Explora los secretos ocultos de tus dinosaurios preferidos</p>
-        </div> 
+            <h1>Noticias Actuales</h1>
+            <div class="noticias">
+                <div class="noticia">
+                    <img src="img/mega.jpg" alt="Megalodón">
+                    <div class="contenido">
+                        <h3>El megalodon no era como nosotros pensábamos...</h3>
+                        <div class="descripcion-container">
+                            <p class="descripcion">
+                                El megalodón o megalodonte es una especie extinta de tiburón que vivió entre hace 19,8 y 2,6 millones de años, aproximadamente, durante el Cenozoico.​ Anteriormente se pensaba que era miembro de la familia Lamnidae y pariente cercano del gran tiburón blanco.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="noticia">
+                    <img src="img/velo.png" alt="Velociraptor">
+                    <div class="contenido">
+                        <h3>Las películas de Hollywood no nos enseñan la verdad</h3>
+                        <div class="descripcion-container">
+                            <p class="descripcion">
+                                Jurassic Park es uno de los ejemplos más claros de cómo las películas nos enseñan una forma incorrecta de los dinosaurios. Se dice que lo hacen por estética para que den más miedo.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="noticia">
+                    <img src="img/t_rex.jpg" alt="Tyrannosaurus Rex">
+                    <div class="contenido">
+                        <h3>El rey del Cretácico</h3>
+                        <div class="descripcion-container">
+                            <p class="descripcion">
+                                El Tiranosaurio rex era el dinosaurio carnívoro y depredador más grande de la época del Cretácico final. Es una pena que un meteorito le rompiera la casa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="noticia">
+                    <img src="img/t_rex.jpg" alt="Tyrannosaurus Rex">
+                    <div class="contenido">
+                        <h3>El rey del Cretácico</h3>
+                        <div class="descripcion-container">
+                            <p class="descripcion">
+                                El Tiranosaurio rex era el dinosaurio carnívoro y depredador más grande de la época del Cretácico final. Es una pena que un meteorito le rompiera la casa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="noticia">
+                    <img src="img/t_rex.jpg" alt="Tyrannosaurus Rex">
+                    <div class="contenido">
+                        <h3>El rey del Cretácico</h3>
+                        <div class="descripcion-container">
+                            <p class="descripcion">
+                                El Tiranosaurio rex era el dinosaurio carnívoro y depredador más grande de la época del Cretácico final. Es una pena que un meteorito le rompiera la casa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="noticia">
+                    <img src="img/t_rex.jpg" alt="Tyrannosaurus Rex">
+                    <div class="contenido">
+                        <h3>El rey del Cretácico</h3>
+                        <div class="descripcion-container">
+                            <p class="descripcion">
+                                El Tiranosaurio rex era el dinosaurio carnívoro y depredador más grande de la época del Cretácico final. Es una pena que un meteorito le rompiera la casa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </main>
