--- a/cursoCSS/pagina_9/pagina2.html
+++ b/cursoCSS/pagina_9/pagina2.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>MundoDino🌿</h1>
+        <input type="checkbox" id="menu">
+        <label for="menu" class="menu-icon">&#9776;</label>
         <nav class="barra">
             <ul>
                 <li><a href="pagina1.html">Inicio🏞️</a></li>
@@ -36,16 +38,16 @@
                 Se cree que su cuello largo le permitía alcanzar grandes cantidades de vegetación sin moverse demasiado, mientras que su cola en forma de látigo podía haber servido como defensa contra depredadores. Sus patas eran relativamente cortas en comparación con otros saurópodos, lo que le daba una postura más horizontal.<br>
                 Fósiles de Diplodocus se han encontrado en Norteamérica, especialmente en la Formación Morrison, y es uno de los dinosaurios más representados en museos debido a su impresionante tamaño y estructura.</p>
         </div>
-        <div id="diplo" class="especie">
-            <h2 id="argentino"><strong>Argentinosaurus</strong></h1>
+        <div id="argentino" class="especie">
+            <h2><strong>Argentinosaurus</strong></h1>
                 <hr>
                 <img src="img/argentino.jpg">
                 <p>El Argentinosaurus fue un dinosaurio herbívoro que vivió durante el período Cretácico, hace aproximadamente 96-92 millones de años, en lo que hoy es Argentina. Pertenecía al grupo de los titanosaurios y es considerado uno de los dinosaurios más grandes que jamás existieron.<br>
                 Se estima que alcanzaba entre 30 y 40 metros de longitud y pesaba alrededor de 50-100 toneladas. Su enorme tamaño lo convertía en un animal difícil de atacar, aunque pudo haber sido presa de grandes terópodos como el Giganotosaurus.<br>
                 Sus fósiles fueron descubiertos en la provincia de Neuquén, Argentina, en la década de 1990, y aunque no se ha encontrado un esqueleto completo, los restos indican que tenía un cuerpo robusto, patas gruesas y un cuello largo que le permitía alimentarse de la vegetación más alta.</p> 
         </div>
-        <div id="diplo" class="especie">
-            <h2 id="pachy"><strong>Pachycephalosaurus</strong></h1>
+        <div id="pachy" class="especie">
+            <h2><strong>Pachycephalosaurus</strong></h1>
                 <hr>
                 <img class="foto_desigual" src="img/pachy.png">
                 <p>Este dinosaurio herbívoro (o posiblemente omnívoro) vivió a finales del período Cretácico, hace aproximadamente 70-66 millones de años, en lo que hoy es Norteamérica.<br>
