--- a/cursoCSS/Web Asesoría Empresarial/index.html
+++ b/cursoCSS/Web Asesoría Empresarial/index.html
@@ -34,29 +34,42 @@
             </div>
         </div>
     </div>
-    <nav class="barra-opciones">
-        <a href="#"><strong>Inicio</strong></a>
-        <a href="#"><strong>Servicios</strong></a>
-        <a href="#"><strong>Contactos</strong></a>
-    </nav>
-    <section class="servicios">
-        <div class="servicio">
-            <img src="img/img_product1.png">
-            <h3>Consultoria Financiera</h3>
-        </div>
-        <div class="servicio">
-            <img src="img/img_product2.png">
-            <h3>Estrategia Empresarial</h3>
-        </div>
-        <div class="servicio">
-            <img src="img/img_product3.png">
-            <h3>Gestión de Recursos humanos</h3>
-        </div>
-    </section>
+    <div class="main-container">
+        <nav class="barra-opciones">
+            <ul>
+                <li><a href="#"><strong>Inicio</strong></a></li>
+                <li><a href="#servicio_medio"><strong>Servicios</strong></a></li>
+                <li><a href="#pie"><strong>Contactos</strong></a></li>
+            </ul>
+        </nav>
+        <section class="servicios">
+            <div id="servicio_medio" class="servicio">
+                <img src="img/img_product1.png">
+                <h3>Consultoria Financiera</h3>
+            </div>
+            <div class="servicio">
+                <img src="img/img_product2.png">
+                <h3>Estrategia Empresarial</h3>
+            </div>
+            <div class="servicio">
+                <img src="img/img_product3.png">
+                <h3>Gestión de Recursos humanos</h3>
+            </div>
+        </section>
+    </div>
     <footer>
-        <p>Calle Ciclista 34, Ciudad Cañamo</p>
-        <p>+34 658 658 745</p>
-    </footer>
+        <div id="pie" class="footer-container">
+          <div class="footer-left">
+            <p>Calle Ciclista 34, Ciudad Cañamo</p>
+            <p>+34 658 658 745</p>
+          </div>
+          <div class="footer-right">
+            <a href="https://x.com/" target="_blank"><img src="img/img_logo_x.png" alt="X (Twitter)"></a>
+            <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="img/img_logo_facebuke.png" alt="Facebook"></a>
+            <a href="https://es.linkedin.com/" target="_blank"><img src="img/img_logo_linkedin.jpg" alt="LinkedIn"></a>
+          </div>
+        </div>
+      </footer>
     
 </body>
 </html>
